--- a/static/main/css/main.css
+++ b/static/main/css/main.css
@@ -169,6 +169,7 @@ button:hover{
     width: 100%;
     position: relative;
     line-height: 50px;
+    transition: 0.3s ease;
 }
 
 .sidebar ul li a{
@@ -270,6 +271,11 @@ input:focus {
 }
 
 .sidebar .icon:hover{
+    margin-left: 5%;
+    transition: 0.3s ease;
+}
+
+.sidebar.active li:hover{
     margin-left: 5%;
     transition: 0.3s ease;
 }
