--- a/static/course/css/search.css
+++ b/static/course/css/search.css
@@ -1,190 +1,21 @@
-form{
+.course-container{
+    margin-left: 100px;
+    margin-top: 20px;
     display: flex;
-    min-height: 15vh;
-    justify-content: left;
-    align-items: center;
+    flex-flow: row wrap;
 }
 
-form input, form button{
-    padding: 0.4 rem;
-    border-radius: 10px;
-    font-size: 1.6 rem;
-    background: white;
-}
-
-form button{
-    color: grey;
-    background: aqua;
-    cursor: pointer;
-    transition: all 0.3 ease;
-    padding: 5px 10px;
-    font-size: 12px;
-    margin-left: 5px;
-}
-
-form button:hover{
-    background-color: lightblue;
-    color: black;
-}
-
-select{
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    appearance: none;
-    outline: none;
-    border: none;
-}
-
-.select{
-    margin: 1rem;
-    position: relative;
-    overflow: hidden;
-}
-
-select{
-    color: #c065c0;
-    width: 8rem;
-    cursor: pointer;
-    padding: 0.7rem;
-}
-
-.select::after{
-    content: "\25bc";
-    position: absolute;
-    color: #c065c0;
-    top: 7px;
-    right: 6px;
-    pointer-events: none;
-}
-
-.select:hover::after{
-   color: #583429;
-}
-
-.todo_container{
-    display: flex;
-    justify-content: left;
-    align-items: center;
-}
-
-.todo_list{
-    min-width: 40%;
-    list-style: none;
-}
-
-.todo_input{
-    padding-left: 10px;
-    padding-right: 10px;
-}
-
-.todo{
-    margin: 5px auto;
-    background: rgb(46, 44, 44);
-    color: #000000;
-    display: flex;
-    font-size: 1.2rem;
-    padding: 0.3rem;
-    justify-content: space-between;
-    align-items: center;
-    transition: all 0.5s ease;
-    border-radius: 10px;
-}
-
-.todo li {
-    flex: 1;
-    white-space: nowrap;
-}
-
-.complete_btn, .delete_btn{
-    padding: 0.5rem;
-    background: #ff3700;
-    color: white;
-    border: none;
-    margin-left: 0.2rem;
-    cursor: pointer;
-    font-size: 1rem;
-}
-
-.complete_btn{
-    background: rgb(67, 179, 67);
-}
-.complete_btn:active{
-    background: green;
-}
-
-.delete_btn:active{
-    background: #b65337;
-}
-
-.fa-trash, .fa-check{
-    pointer-events: none;
-}
-
-.completedItem{
-    text-decoration: line-through;
-    opacity: 0.5;
-    transform: scale(0.96);
-}
-
-.fall{
-    transform: 0.3 ease;
-    opacity: 0;
-}
-
-.courses{
-    margin-left: 5%;
-    margin-top: 3%;
+.course{
+    margin-top: 30px;
     display: inline-block;
+    margin-bottom: 50px;
 }
 
-.courses img{
-    margin-left: 10px;
-    max-width: 150px;
-    max-height: 300px;
-}
-
-.courses h4{
+.course h4{
     text-align: center;
 }
 
-.rate {
-    float: left;
-    height: 46px;
-    padding: 0 10px;
-}
-.rate:not(:checked) > input {
-    position:absolute;
-    top:-9999px;
-}
-.rate:not(:checked) > label {
-    float:right;
-    width:1em;
-    overflow:hidden;
-    white-space:nowrap;
-    cursor:pointer;
-    font-size:30px;
-    color:#ccc;
-}
-.rate:not(:checked) > label:before {
-    content: '★ ';
-}
-.rate > input:checked ~ label {
-    color: #ffc700;    
-}
-.rate:not(:checked) > label:hover,
-.rate:not(:checked) > label:hover ~ label {
-    color: #deb217;  
-}
-.rate > input:checked + label:hover,
-.rate > input:checked + label:hover ~ label,
-.rate > input:checked ~ label:hover,
-.rate > input:checked ~ label:hover ~ label,
-.rate > label:hover ~ input:checked ~ label {
-    color: #c59b08;
-}
-
 .search{
-    margin-top: 1%;
     text-align: center;
     transition: 0.5s ease;
 }
@@ -202,28 +33,18 @@ select{
 .search input{
     padding: 6px;
     width: 40%;
+    min-width: 300px;
+    border-radius: 15px;
+    border: 1px solid grey;
 }
 
-.private{
-    margin-left: 8%;
-    margin-top: 2%;
-    transition: 0.5s ease;
+.search input:focus {
+    border: 2px solid rgba(0,136,169,1);
+    outline: none;
 }
 
-.public{
-    margin-left: 8%;
-    margin-top: 2%;
-    transition: 0.5s ease;
-}
-
-.private.active{
-    margin-left: 23%;
-    transition: 0.5s ease;
-}
-
-.public.active{
-    margin-left: 23%;
-    transition: 0.5s ease;
+.search button {
+    border-radius: 10px;
 }
 
 .add{
@@ -232,6 +53,184 @@ select{
     margin-left: 85%;
 }
 
-.search h2{
-    margin-bottom: 1%;
+.loader {
+    border: 8px solid rgba(0, 0, 0, 0); /* Light grey */
+    border-top: 8px solid rgba(0,136,169,1);
+    border-left: 8px solid rgba(0,136,169,1);
+    border-radius: 50%;
+    width: 25px;
+    height: 25px;
+    animation: spin 2s linear infinite;
+    margin: 30px auto;
+    display: none;
+}
+  
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+}
+
+.no-course {
+    margin: 0 auto;
+    color: grey;
+}
+
+.course {
+    margin: 20px 20px;
+    width: 200px;
+    text-align: center;
+}
+
+.course img{
+    border: 0.5px solid #E3E6EF;
+    cursor: pointer;
+    width: 100%;
+    max-height: 300px;
+}
+
+.course img:hover {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    border: none;
+}
+
+.course-info h4{
+    cursor: pointer;
+    text-align: center;
+}
+
+.course-info h4:hover {
+    color: rgba(0,136,169,1);
+}
+
+.more {
+    margin: 20px auto;
+    display: block;
+}
+
+.page {
+    padding-bottom: 30px;
+    margin-left: calc(2% + 100px);
+    margin-right: 50px;
+}
+
+.course-skeleton {
+    background-color: #fff;
+    height: auto;
+    width: auto;
+    overflow: hidden;
+    border-radius: 5px;
+    box-shadow: 9px 17px 45px -29px rgba(0, 0, 0, 0.44);
+    margin: 20px 20px;
+}
+
+.course-card-img {
+    height: 150px;
+    width: 200px;
+}
+
+.course-card-title {
+    height: 1rem;
+    width: 50%;
+    margin: 1rem;
+    border-radius: 3px;
+}
+
+.course-card-desc {
+    height: 2rem;
+    margin: 1rem;
+    border-radius: 3px;;
+}
+
+.loading-skeleton {
+    position: relative;
+    background-color: #e2e2e2;
+}
+
+.loading-skeleton::after {
+    display: block;
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    transform: translateX(-100%);
+    background: -webkit-gradient(linear, left top,
+                right top, from(transparent), 
+                color-stop(rgba(255, 255, 255, 0.2)),
+                to(transparent));
+                  
+    background: linear-gradient(90deg, transparent,
+            rgba(255, 255, 255, 0.2), transparent);
+
+    /* Adding animation */
+    animation: loading 0.8s infinite;
+}
+
+/* Loading Animation */
+@keyframes loading {
+    100% {
+        transform: translateX(100%);
+    }
+}
+
+.rating-stars {
+    text-align: center;
+}
+
+.star-rating-active {
+    color: rgb(255, 187, 0);
+}
+
+.autocomplete {
+    position: relative;
+    display: inline-block;
+}
+
+.autocomplete-items{
+    position:absolute;
+    border: 1px solid #d4d4d4;
+    border-bottom: none;
+    border-top: none;
+    z-index: 99;
+    top: 100%;
+    left: 0;
+    right: 0;
+}
+
+.ui-menu-item-wrapper {
+    color: rgba(0,136,169,1);
+    border-radius: 10px;
+}
+
+.ui-autocomplete{
+    border-radius: 10px;
+}
+
+.ui-menu-item{
+    border-radius: 10px;
+}
+
+.ui-state-active,
+.ui-widget-content .ui-state-active,
+.ui-widget-header .ui-state-active,
+a.ui-button:active,
+.ui-button:active,
+.ui-button.ui-state-active:hover {
+    background-color: rgba(0,136,169,1);
+    border:none
+}
+
+.category-container {
+    width: 100%;
+}
+
+.category-tag {
+    position: relative;
+    background-color: rgba(0,136,169,1);
+    border-radius: 10px;
+    font-size: 18px;
+    color: white;
+    cursor: pointer;
+    margin-left: 100px;
+    padding: 10px;
+    width: max-content;
 }
