--- a/static/dashboard/css/dashboard.css
+++ b/static/dashboard/css/dashboard.css
@@ -42,8 +42,9 @@
 .recommend img{
     margin-top: 0;
     width: 100%;
-    height: auto;
+    height: 100%;
     transition: 0.5s ease;
+    object-fit: cover;
 }
 
 .trans{
@@ -262,8 +263,8 @@ color: rgb(25, 39, 230)139, 201);
 }
 
 .note_rec{
+    margin-top: 30px;
     margin-left: 7%;
-    margin-top: -2%;
     margin-bottom: 3%;
     transition: 0.5s ease;
 }
@@ -273,10 +274,19 @@ color: rgb(25, 39, 230)139, 201);
     transition: 0.5s ease;
 }
 
+.notes_container {
+    margin: 20px 20px;
+    display: flex;
+    flex-flow: row wrap;
+}
+
 .notes{
-    margin-left: 5%;
-    margin-top: 3%;
+    margin-top: 30px;
+    width: 200px;
     display: inline-block;
+    margin-bottom: 50px;
+    margin-right: 30px;
+    text-align: center;
 }
 
 .notes img{
@@ -285,9 +295,10 @@ color: rgb(25, 39, 230)139, 201);
     max-height: 300px;
 }
 
-.notes h4{
+.search-more {
     text-align: center;
 }
+
 
 .rate {
     float: left;
@@ -376,3 +387,4 @@ color: rgb(25, 39, 230)139, 201);
         width: 30%;
     }
 }
+
