--- a/account/templates/account/edit.html
+++ b/account/templates/account/edit.html
@@ -21,15 +21,17 @@
                 <div class="edit-profile"><button id="edit-profile">Edit Profile</button></div>
             </div>
         </div>
+        <!--
         <div class="posts">
             <div class="post-box">
                 <div class="post-name">{{user.name}}</div>
                 <div class="post-username">{{user.username}}</div>
             </div>
         </div>
+        -->
     </div>
     <div class="right-container">
-        <div class="friend-heading">Friends</div>
+        <div class="friend-heading">Studymate</div>
         <div class="friend-lists">
 
         </div>
